added gregstar block and fixed datagen