@@ -1,5 +1,6 @@
 package com.thevortex.allthetweaks.datagen.client;
 
+import com.thevortex.allthetweaks.blocks.MiniPortalBlock;
 import com.thevortex.allthetweaks.blocks.TweakBlocks;
 import com.thevortex.allthetweaks.config.Reference;
 import net.minecraft.data.DataGenerator;
@@ -21,21 +22,10 @@ public class BlockStates extends BlockStateProvider {
     @Override
     protected void registerStatesAndModels() {
         List<Block> entries = TweakBlocks.BLOCKS.getEntries()
-            .stream().map(RegistryObject::get)
-            .collect(Collectors.toList());
+                .stream().map(RegistryObject::get)
+                .filter(block -> !(block instanceof MiniPortalBlock) && !block.defaultBlockState().is(TweakBlocks.ATM_TROPHY.get()))
+                .toList();
 
-        entries.forEach(this::simpleBlockAndItem);
-    }
-
-    /**
-     * Generates an item model and block model/blockstate for a simple block
-     * @param block the block
-     */
-    private void simpleBlockAndItem(Block block) {
-        simpleBlock(block);
-
-        String blockName = Objects.requireNonNull(block.getName()).toString();
-        BlockModelBuilder builder = models().getBuilder(blockName);
-        simpleBlockItem(block, builder);
+        entries.forEach(block -> simpleBlockWithItem(block, cubeAll(block)));
     }
 }
